fix: resolve remaining SonarCloud code quality findings
Add PropTypes to ContactsPage subcomponents, improve Modal dialog accessibility, and address Java findings for empty constructors, duplicate literals, Stream.toList(), and ContactResponse parameter count.